<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="NestedWeights" >

     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:fillViewport="true"
         android:padding="8dp" >
         
         <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
        	
             <TextView
                 android:id="@+id/lblSignWidth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:text="@string/lblSignWidth_caption"
                 android:textAppearance="?android:attr/textAppearanceMedium" />

             <EditText
                 android:id="@+id/txtSignWidth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="numberDecimal" >
                 <requestFocus />
             </EditText>
             
             <TextView
                 android:id="@+id/lblSignHeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
                 android:text="@string/lblSignHeight_caption"
                 android:textAppearance="?android:attr/textAppearanceMedium" />

			<EditText
                 android:id="@+id/txtSignHeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="4dp"
                 android:ems="10"
                 android:inputType="numberDecimal" >
            </EditText>
            
			<Button
			    android:id="@+id/btCapture"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="8dp"
			    android:layout_marginRight="8dp"
			    android:layout_marginTop="4dp"
			    android:text="@string/btCapture_caption" />
            
			<HorizontalScrollView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="8dp"
			    android:layout_marginRight="8dp"
			    android:layout_marginTop="4dp" >
                 
			    <LinearLayout
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal">
        
			        <ImageView
			            android:id="@+id/imageBefore"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:adjustViewBounds="true"
			            android:contentDescription="@string/img_description" />
								
					<ImageView
					    android:id="@+id/imageAfter"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:adjustViewBounds="true"
					    android:contentDescription="@string/img_description" />

				</LinearLayout>
			</HorizontalScrollView>

			<LinearLayout 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
             
	             <TextView
	                 android:id="@+id/lblHueRange"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginLeft="8dp"
	                 android:layout_marginRight="8dp"
	                 android:layout_marginTop="4dp"
	                 android:text="@string/lblHueRange_caption"
	                 android:textAppearance="?android:attr/textAppearanceMedium" />

	             <TextView
	                 android:id="@+id/lblHueRangeValue"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginLeft="8dp"
	                 android:layout_marginRight="8dp"
	                 android:layout_marginTop="4dp"
	                 android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
             
             <SeekBar
                 android:id="@+id/sbHueUppper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:max="180" />
             
             <com.vpcodebuilder.objectmeasurement.GradientColorView
                 android:id="@+id/colorRangeView"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"/>

             <SeekBar
                 android:id="@+id/sbHueLower"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="180" />
             
             <LinearLayout 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
             
	             <TextView
	                 android:id="@+id/lblSaturationRange"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginLeft="8dp"
	                 android:layout_marginRight="8dp"
	                 android:layout_marginTop="4dp"
	                 android:text="@string/lblSaturationRange_caption"
	                 android:textAppearance="?android:attr/textAppearanceMedium" />

	             <TextView
	                 android:id="@+id/lblSaturationRangeValue"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginLeft="8dp"
	                 android:layout_marginRight="8dp"
	                 android:layout_marginTop="4dp"
	                 android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
             
             <SeekBar
                 android:id="@+id/sbSaturationUppper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:max="255" />

             <SeekBar
                 android:id="@+id/sbSaturationLower"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="255" />
             
             <LinearLayout 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal">
             
	             <TextView
	                 android:id="@+id/lblValueRange"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginLeft="8dp"
	                 android:layout_marginRight="8dp"
	                 android:layout_marginTop="4dp"
	                 android:text="@string/lblValueRange_caption"
	                 android:textAppearance="?android:attr/textAppearanceMedium" />

	             <TextView
	                 android:id="@+id/lblValueRangeValue"
	                 android:layout_width="wrap_content"
	                 android:layout_height="wrap_content"
	                 android:layout_marginLeft="8dp"
	                 android:layout_marginRight="8dp"
	                 android:layout_marginTop="4dp"
	                 android:textAppearance="?android:attr/textAppearanceMedium" />
             </LinearLayout>
             
             <SeekBar
                 android:id="@+id/sbValueUppper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:max="255" />

             <SeekBar
                 android:id="@+id/sbValueLower"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="255" />
         </LinearLayout>
    </ScrollView>
    
    <LinearLayout
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
             
        <View
        	android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#393b3e" />
              
        <LinearLayout
        	android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">    
                      
            <Button
                android:id="@+id/btSave"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/btSave_caption" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#393b3e" />
              
            <Button
                android:id="@+id/btClose"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/btClose_caption" />
        </LinearLayout>
          
		<View
			android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#393b3e" />    
	</LinearLayout>
</LinearLayout>